--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 *{
     padding: 0px;
     margin: 0px;
 }
 
+.body-size{
+    max-width: 1920px;
+}
+.dancing-script-font {
+  font-family: "Dancing Script",cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* shapa a use kora font maybe paid tai aita dilam asha kori kono problems nai */
 .inter-font {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
@@ -14,10 +25,10 @@
 
 
 header{
-    width: 99.7%;
+    width: 100%;
     height: 915px;
-    border: 3px solid green;
-    background: linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
+    border: 0.1px solid;
+    background: rgb(82, 86, 89) linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
   
 }
 /* nav style start here */
@@ -25,16 +36,17 @@ header{
 .nav-items{
     list-style: none;
     display: flex;
-    width: 500px;
+    width: 440px;
     height: 50px;
     justify-content:center;
-    margin-top: 50px;
+    align-items: center;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 45px;
 }
 
 .nav-items li a{
     text-decoration: none;
-    
-    padding: 8px 23px;
+    padding: 13px 27px;
     
 }
 
@@ -47,7 +59,7 @@ header{
 
 .nav-name{
  color: rgb(230, 83, 60);
-font-size: 3rem;
+font-size: 5rem;
 font-weight: 800;
 font-style: italic;
 }
@@ -56,7 +68,8 @@ font-style: italic;
     display: flex;
     justify-content: space-between; 
     align-items: center;
-    margin: 2% 10%;    
+    margin: 0 10%;  
+    margin-top: 2%;
 }
 
 .special-icon{
@@ -67,29 +80,28 @@ font-style: italic;
 
 .banner-container{
     display: flex;
-    margin: 1% 30% 1% 10%;
+    width: 99.9%;
+    height: 710px;
+    justify-content: space-around;
 }
 
 .banner-box{
-    margin-right: 45%;
-    margin-bottom: 10%;
+    margin-top: 3%;
     height: 100%;
-    width: 100%;
-    margin-top: 5%;
+    width: 40%;
+    margin-left: 5%;
 }
 
 .banner-titel{
 color: rgb(255, 255, 255);
-font-size: 4rem;
+font-size: 5rem;
 font-weight: 900;
 text-align: left;
 margin-bottom: 5%;
 margin-top: 7%;
+width: 100%;
 }
-
-.shape{
-    font-style:;
-}
+ 
 .banner-p{
 color: rgba(255, 255, 255, 0.5);
 font-size: 1.2rem;
@@ -99,8 +111,8 @@ margin-bottom: 5%;
 }
 
 button{
-width: 224px;
-height: 54px;
+width: 35%;
+height: 55px;
 align-items: flex-start;
 padding: 1% 2%;
 margin: 5% 1%;
@@ -113,18 +125,21 @@ background-color:transparent;
 }
 
 .banner-image{
-  margin-bottom: 8.5%;
+    margin-left: 0%;
+    margin-right: 3%;
+    margin-top: 0;
 }
 .banner-image img{
-    height: 125%;
-    margin-top: -4%;
-    
+    height: 115%;
+    max-height: 785px; 
+    position: relative;
 }
 /* SHARE STYLE */
 .share-button{
     color: rgb(255, 255, 255);
     background: rgb(260, 100, 60);
     border: none;
+    height: 60px;
 }
 
 .kisu-bolar-nai-vai{
@@ -136,15 +151,16 @@ background-color:transparent;
 
 .button-picture{
     display: flex;
-    border: 2px solid red;
     align-items: center;
-    width: 50%;
-    height: 12%;
+    width: 9%;
+    height: 9.5%;
     border-radius: 9px;
     justify-content: space-around;
-    background: transparent;
-    margin-top: -49%;
-    margin-left: -25%;
+    margin-top: -10%;
+    margin-left: -4%;
+    background-color: rgb(82, 86, 89);
+    position: absolute;
+    color: transparent;
 }
 
 .mew-one{
@@ -155,17 +171,17 @@ background-color:transparent;
 }
 
 .video-tutorial{
-    color:aliceblue;
+    color:rgb(82, 86, 89);
 }
 .button-picture-two{
-    border: 2px solid green;
-    width: 48%;
-    height: 12%;
-    margin-top: -125%;
-    margin-left: 89%;
+    border: 2px solid rgb(82, 86, 89);
+    width: 8.5%;
+    height: 8%;
+    margin-top: -28%;
+    margin-left: 16%;
     text-align: center;
     border-radius: 10px;
-    background: transparent;
+    position: absolute;
 }
 
  /* habits  style start here */
@@ -196,6 +212,7 @@ background-color:transparent;
 
  .habit-item-boxs div img{
     border-radius: 50%;
+    border: 4px solid rgb(82, 86, 89);
  }
 
  .habit-item-boxs div h3{
@@ -242,8 +259,6 @@ background-color:transparent;
  }
 
  #join-now{
-    width: 224px;
-    height: 54px;
     padding: 1.5% 7%;
     border-radius: 45px;
     font-weight: bold;
@@ -251,4 +266,266 @@ background-color:transparent;
     color: rgb(255, 255, 255);
     background: rgb(230, 83, 60);
     margin-bottom: 15%;
+}
+
+/* bmi section started */
+.bmi-title{
+    color: rgb(255, 255, 255); 
+    font-weight: 900;
+    text-align: center; 
+    font-size: 3.5rem;
+}
+
+.about-bmi{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 1rem;
+    margin: 0 15%;
+    text-align: center;
+    margin-top: 2%;
+}
+
+.calculator-background{
+    background: rgb(34, 34, 34);
+    margin: 5% 0;
+    height: 500px;
+    display: flex;
+    justify-content: space-between;
+    max-height: 1919px;
+}
+.calculator-box h3{
+    color: rgb(255, 255, 255); 
+    font-weight: 900;
+    text-align:left; 
+    font-size: 2rem;
+    margin-left: 14%;
+}
+table{
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    height: 60%;
+    width: 40%;
+    align-items: center;
+    text-align: center;
+    border-collapse: collapse;
+    margin-left: 15%;
+    margin-top: 2%;
+}
+td ,th{
+    color: rgba(255, 255, 255, 0.5);
+    border: 1px solid rgba(255, 255, 255, 0.5);    
+}
+
+.calculator-box{
+    margin-left: 3%;
+    width: 80%;
+    align-items: left;
+    margin-top: 2.5%;
+}
+
+.bmi-calculator-box{
+    height: 85%;
+    width: 60%;
+    margin-right: 10%;
+    text-align: center;
+    margin: 2.5% 15% 0 0;
+}
+
+.bmi-calculator-box h3{
+    color: rgb(255, 255, 255); 
+    font-weight: 900;
+    font-size: 2rem;
+   text-align: left;
+}
+
+.bmi-calculator-box p{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 1rem;
+    text-align: left;
+    margin-top: 2%;
+}
+
+#calculation{
+    margin: 5% 0 5% 0;
+    display: grid;
+    grid-template-columns: repeat(2,2fr);
+    gap: 10px;
+}
+
+#calculation input,select,option{
+padding: 4.7%;
+border-radius: 15px;
+border: none;
+color:rgba(255, 255, 255, 0.5);
+background-color:rgba(265, 255, 255, 0.08) ;
+}
+
+#calculation-btn{
+    background: rgb(230, 83, 60);
+    border: none;
+    height: 55px;
+    width: 55%;
+}
+
+/* about team member */
+.team-container{
+max-width: 1920px;
+height: 100%;
+max-height: 1200px;
+margin: 5% 0;
+padding-left: 10%;
+
+padding: 0 5%;
+padding-bottom: 0;
+}
+
+.team-title-one{
+    color: rgb(255, 255, 255); 
+    font-weight: 900;
+    text-align:center; 
+    font-size: 3.5rem;
+}
+
+.team-description-one{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 1rem;
+    margin: 0 15%;
+    text-align: center;
+    margin-top: 1%;
+}
+
+.about-member{
+margin: 5% 10% 0 10%;
+background-color: rgb(34, 34, 34);
+border-radius: 20px;
+display: grid;
+grid-template-columns: repeat(3,2fr);
+gap: 2%;
+padding: 1.5%;
+min-height: 780px;
+}
+
+.member-name{
+    color: rgb(255, 255, 255);
+    font-size:30px;
+}
+
+.member-position{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 30px;
+}
+
+.team-image img{
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    position: relative;
+    max-height: 380px;
+}
+
+
+.name-position{
+position: absolute;
+margin-left: -21%;
+margin-top: 15%;
+}
+
+/* creative section from myself */
+
+.creative-section{
+    height: 1100px;
+    width: 99.5%;
+    border: 5px solid red;
+    background-color: chocolate;
+}
+
+footer{
+    background-color: rgb(34, 34, 34);
+}
+
+.footer-box{
+    margin: 0 10%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-box1{
+    width: 45%;
+    height: 100%;
+}
+.footer-title1{
+    margin-top: 8%;
+    color: rgb(230, 83, 60);
+    font-size: 5rem;
+    font-weight: 800;
+    font-style: italic;
+}
+
+.footer-box1 p{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 1.25rem;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    padding: 1.5%;
+    padding-right: 10%;
+    
+}
+
+footer div ul li a{
+    color: rgba(255, 255, 255, 0.5);
+    text-decoration: none;
+    font-size: 1.25rem;
+}
+.service-collection li{
+    list-style:none;
+    margin-top: 3%;
+}
+.footer-title3, .footer-title2 {
+    margin-top: 25%;
+    color: aliceblue;
+    font-size: 3rem;
+    margin-bottom: 20%;
+}
+
+.footer-title3{
+    margin-top: 20%;
+    margin-bottom: 15%;
+}
+
+.copyright{
+    border-top: 3px solid rgba(255, 255, 255, 0.1);
+    text-align: center;
+    height: 100px;
+    margin: 3% 10% 0 10%;
+}
+
+.copyright h2 {
+    align-items: center;
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 1.25rem;
+    font-weight: 50;
+    margin: 2.5% 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width:576px) {
 }
