--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@
 .dancing-script-font {
   font-family: "Dancing Script",cursive;
   font-optical-sizing: auto;
-  font-weight: 400;
+  font-weight: 800;
   font-style: normal;
+  font-size: 80px;
 }
 
 /* shapa a use kora font maybe paid tai aita dilam asha kori kono problems nai */
