--- a/style.css
+++ b/style.css
@@ -432,12 +432,77 @@ margin-top: 15%;
 /* creative section from myself */
 
 .creative-section{
-    height: 1100px;
-    width: 99.5%;
-    border: 5px solid red;
-    background-color: chocolate;
+    height: 1060px;
+    max-width: 1920px;
+    width: 100%;
+    margin: 20px 0;
+    border-radius: 30px;
 }
 
+.food-title{
+    text-align: center;
+    color: aliceblue;
+    padding: 3%;
+    font-size: 50px;
+    padding-bottom: 1%;
+}
+
+.about-healthy-food{
+    color: rgba(255, 255, 255, 0.5);
+    text-align: center;
+    margin: 0 15%;
+    font-size: 20px;
+}
+
+.food-items{
+    margin: 2% 10%;
+    height: 100%;
+    max-height: 800px;
+    background-color: black;
+    border-radius: 15px;
+    display: grid;
+    grid-template-columns: repeat(2,2fr)
+}
+
+.food-image{
+    min-width: 300px;
+    max-width: 500px;
+    max-height: 300px;
+    width: 100%;
+    height: 100%;
+    padding: 12% 5%;
+    justify-content: left;
+    border-radius: 50%;
+}
+
+.food-item{
+    display: flex;
+    background-color: rgb(34, 34, 34);
+    margin: 1.5%;
+    border-radius: 20px;
+    max-height: 100%;
+    max-height: 375px;
+    box-shadow: 10px 7px rgba(255, 255, 255, 0.2);
+}
+
+.food-information{
+    justify-content: right;
+    align-items: center;
+    text-align: center;
+    margin: auto 0;
+}
+
+.food-name{
+    color: aliceblue;
+    font-size: 35px;
+}
+
+.food-detalis{
+    color: rgba(255, 255, 255, 0.5);
+    padding: 5%;
+    font-size: 20px;
+}
+/* creative section end from myself */
 footer{
     background-color: rgb(34, 34, 34);
 }
