--- a/style.css
+++ b/style.css
@@ -5,9 +5,6 @@
     margin: 0px;
 }
 
-.body-size{
-    max-width: 1920px;
-}
 .dancing-script-font {
   font-family: "Dancing Script",cursive;
   font-optical-sizing: auto;
@@ -26,10 +23,14 @@
 
 
 header{
-    width: 100%;
     height: 920px;
-    border: 0.1px solid;
-    background: rgb(82, 86, 89) linear-gradient(180.00deg, rgb(17, 17, 17),rgba(119, 119, 119, 0) 100%);
+    background: rgb(82, 86, 89);
+    background: linear-gradient(
+        to top,      
+        rgba(119, 119, 119, 0),
+        rgba(80, 80, 80, 0.7), 
+        rgba(119, 119, 119, 0)   
+    );
   
 }
 /* nav style start here */
@@ -148,20 +149,22 @@ background-color:transparent;
     width: 50px;
     background-color: orangered;
     border-radius: 50px;
+    margin-left: 0px;
 }
 
 .button-picture{
     display: flex;
     align-items: center;
-    width: 9%;
-    height: 9.5%;
+    width: 12%;
+    height: 11%;
     border-radius: 9px;
-    justify-content: space-around;
-    margin-top: -10%;
-    margin-left: -4%;
-    background-color: rgb(82, 86, 89);
+    margin-top: -11%;
+    margin-left: -6%;
     position: absolute;
     color: transparent;
+    border: 1px solid rgb(82, 86, 89);
+    background: rgba(255, 255, 255, 0.1);
+    justify-content: space-evenly;
 }
 
 .mew-one{
@@ -172,17 +175,19 @@ background-color:transparent;
 }
 
 .video-tutorial{
-    color:rgb(82, 86, 89);
+    color:rgba(255, 255, 255, 0.5);
+    font-size: 20px;
+    font-weight: 500;
 }
 .button-picture-two{
-    border: 2px solid rgb(82, 86, 89);
-    width: 8.5%;
-    height: 8%;
+    border: 1px solid rgb(82, 86, 89);
     margin-top: -28%;
     margin-left: 16%;
     text-align: center;
     border-radius: 10px;
     position: absolute;
+    background: rgba(255, 255, 255, 0.1);
+    padding: 1%;
 }
 
  /* habits  style start here */
@@ -259,7 +264,8 @@ background-color:transparent;
     margin-bottom: 8%;
  }
 
- #join-now{
+ 
+ .join-now{
     padding: 1.5% 7%;
     border-radius: 45px;
     font-weight: bold;
@@ -315,6 +321,9 @@ td ,th{
     border: 1px solid rgba(255, 255, 255, 0.5);    
 }
 
+.calculator-title{
+    color: aliceblue;
+}
 .calculator-box{
     margin-left: 3%;
     width: 80%;
@@ -574,7 +583,9 @@ footer div ul li a{
 
 
 
-
+.hide{
+    display: none;
+}
 
 
 
@@ -594,4 +605,365 @@ footer div ul li a{
 
 
 @media screen and (max-width:576px) {
+ *{
+    margin: 0;
+    padding: 0;
+ }
+    /* header part start here */
+    .hide1{
+        display: none;
+    }
+    header{
+        height: 1420px
+    }
+    .banner-container{
+    display: flex;
+    flex-direction: column;}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
+.nav-position{
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+    margin:10% 5%;  
+}
+
+
+.nav-name{
+    color: rgb(230, 83, 60);
+   font-size: 3rem;
+   font-weight: 800;
+   font-style: italic;
+   }
+.banner-box{
+    height: 100%;
+    width: 94%;
+}
+
+.banner-titel{
+    color: rgb(255, 255, 255);
+    font-size: 3.5rem;
+    font-weight: 900;
+    text-align: left;
+    margin-bottom: 5%;
+    
+    }
+
+ .banner-p{
+        color: rgba(255, 255, 255, 0.5);
+        font-size: 1.2rem;
+        font-weight: 400;
+        text-align: left;
+        margin-right: 15%;
+        }
+
+        
+button{
+    width: 35%;
+    height: 70px;
+    align-items: flex-start;
+    padding: 1% 2%;
+    border-radius: 45px;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: rgb(255, 255, 255);
+    border: 1.5px solid white;
+    }
+
+    .share-button{
+        color: rgb(255, 255, 255);
+        background: rgb(260, 100, 60);
+        border: none;
+        height: 70px;
+    }
+
+    .btn-1{
+        margin-left: 8%;
+    }
+
+    .btn-2{
+        margin-right: 15%;
+    }
+
+    .nav-btns{
+        justify-content: space-between;
+    }
+
+    
+.banner-image{
+    margin: 0 auto;
+}
+
+.button-picture{
+    display: flex;
+    align-items: center;
+    width: 35%;
+    height: 10%;
+    border-radius: 9px;
+    margin-top: -68%;
+    margin-left: -2%;
+    position: absolute;
+    color: transparent;
+    border: 1px solid rgb(82, 86, 89);
+    background: rgba(255, 255, 255, 0.1);
+    justify-content: space-evenly;
+}
+
+.button-picture-two{
+    border: 1px solid rgb(82, 86, 89);
+    margin-top: -108%;
+    margin-left: 40%;
+    text-align: center;
+    border-radius: 10px;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.1);
+    width: 37%;
+    height: 9%;
+}
+/* header part end here */
+
+/* habbit part start here */
+.habbit-box{
+    margin-bottom: 0px;
+}
+.habit-item-boxs{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0;
+}
+
+.habbit-discription{
+    margin: 5% 10%;
+    margin-bottom: 15%;
+}
+
+.habit-item-boxs img{
+    width: 250px;
+}
+
+.habit-item-boxs div >h3{
+    font-size: 2rem;
+}
+
+.habit-item-boxs div >p{
+    margin: 3% 10% 15% 10%;
+}
+/* habbit end start here */
+
+/* habbit run-box start here */
+.run-box{
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
+    height: 780px;
+    margin: 5% 5% 30% 5%;
+    border-radius: 30px;
+}
+
+.about-run{
+    margin: 10% 5% 5% 5%;
+}
+
+.about-run p{
+font-size: 1.25rem;
+margin: 10% 0;
+}
+
+.join-now{
+   width: 60px;
+   height: 30px;
+   margin: 0;
+   font-size: 25px;
+   font-weight: 500;
+   padding: 5% 35%;
+   }
+
+   .run-box div >img{
+    margin: 8% auto;
+    height: 310px;
+    width: 410px;
+    border-radius: 30px;
+   }
+
+/* habbit run-box end here */
+
+/* habbit bmi-box start here */
+.calculator-background{
+    display: flex;
+    flex-direction: column;
+    height: 1050px;
+    justify-content: left;
+    text-align: left;
+}
+
+.bmi-title{
+    text-align: left;
+    margin: 0 20% 5% 5%;
+}
+.about-bmi{
+    text-align: left;
+    margin: 0 10% 5% 5%;
+    font-size: 1.25rem;
+}
+
+.calculator-box h3{
+    font-size: 1.75rem;
+    margin: 10% 0 5% 3%;
+}
+
+table{
+    border: 1px solid rgba(71, 68, 68, 0.8);
+    height: 120%;
+    width: 100%;
+    align-items: center;
+    text-align: center;
+    border-collapse: collapse;
+    margin: 8% 0 5% 3%;
+}
+
+.calculator-title{
+   font-size: 1.5rem;
+   font-weight: 500;
+}
+
+.bmi-calculator-box{
+    height: 50%;
+    width: 90%;
+    margin-right: 10%;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 40%;
+}
+
+.bmi-calculator-box h3{
+    font-size: 1.75rem;
+    margin: 0 0 5% 3%;
+}
+
+.bmi-calculator-box p{
+    text-align: left;
+    margin: 0 10% 10% 5%;
+    font-size: 1.25rem;
+}
+#calculation{
+    margin: 5% 0 5% 0;
+    display: grid;
+    grid-template-columns: repeat(2,2fr);
+    gap: 10px;
+}
+
+#calculation input,select,option{
+    padding: 9% 4.7%;
+    border-radius: 15px;
+    border: none;
+    color:rgba(255, 255, 255, 0.5);
+    background-color:rgba(265, 255, 255, 0.08) ;
+    font-size: 20px;
+    }
+
+    #calculation-btn{
+        background: rgb(230, 83, 60);
+        border: none;
+        height: 75px;
+        width: 115%;
+        font-size: 25px;
+    }
+/* habbit bmi-box end here */
+
+/* habbit team-container start here */
+ .team-title-one{
+    margin: 13% auto 5%;
+    font-size: 2.9rem;
+ }
+
+ .team-description-one{
+    font-size: 1.3rem;
+    margin: 5% auto 15%;
+ }
+
+ .about-member{
+    display: grid;
+    grid-template-columns: repeat(1,6fr);
+    margin: 0;
+    gap: 1%;
+    height: 2860px;
+    padding: 5% 1%;
+    border-radius: 30px;
+ }
+
+ .team-image img{
+    width: 100%;
+    height: 100%;
+    border-radius: 35px;
+    position: relative;
+    max-height: 450px;
+    min-height: 449px;
+    max-width: 460px;
+    padding: 0 3%;
+}
+
+.name-position{
+    position: absolute;
+    margin-left: -78%;
+    margin-top: 63%;
+    }
+/* habbit team-container end here */
+
+/* habbit creative-section start here */
+.creative-section{
+    margin-top: 350%;
+    height: 1500px;
+}
+
+.about-healthy-food{
+    margin: 5% 5% 10% 5%;
+}
+
+.food-title{
+    margin-top: 15%;
+}
+.food-items{
+    display: grid;
+    grid-template-columns: repeat(1,4fr);
+}
+
+.food-image{
+    width: 100px;
+    width: 100px;
+    justify-content: left;
+    border-radius: 50%;
+}
+
+.food-item{
+    border: 2px solid gray;
+    display: flex;
+    background-color: rgb(34, 34, 34);
+    border-radius: 20px;
+    height: 200px;
+    width: 500px;
+    box-shadow: none;
+    margin: 2.5% auto
+}
+.food-name{
+    color: aliceblue;
+    font-size: 25px;
+}
+
+.food-detalis{
+    color: rgba(255, 255, 255, 0.5);
+    padding: 0;
+    font-size: 20px;
+}
+.food-information{
+    justify-content: right;
+    margin: 5% 20% 5% 0;
+}
+/* habbit creative-section end here */
 }
