--- a/style.css
+++ b/style.css
@@ -757,7 +757,7 @@ button{
 }
 /* habbit end start here */
 
-/* habbit run-box start here */
+/*  run-box start here */
 .run-box{
     display: flex;
     flex-direction: column;
@@ -792,9 +792,9 @@ margin: 10% 0;
     border-radius: 30px;
    }
 
-/* habbit run-box end here */
+/*  run-box end here */
 
-/* habbit bmi-box start here */
+/*  bmi-box start here */
 .calculator-background{
     display: flex;
     flex-direction: column;
@@ -875,9 +875,9 @@ table{
         width: 115%;
         font-size: 25px;
     }
-/* habbit bmi-box end here */
+/*  bmi-box end here */
 
-/* habbit team-container start here */
+/*  team-container start here */
  .team-title-one{
     margin: 13% auto 5%;
     font-size: 2.9rem;
@@ -914,12 +914,12 @@ table{
     margin-left: -78%;
     margin-top: 63%;
     }
-/* habbit team-container end here */
+/*  team-container end here */
 
-/* habbit creative-section start here */
+/*  creative-section start here */
 .creative-section{
-    margin-top: 350%;
-    height: 1500px;
+    margin-top: 360%;
+    height: 1400px;
 }
 
 .about-healthy-food{
@@ -927,18 +927,27 @@ table{
 }
 
 .food-title{
-    margin-top: 15%;
+    margin-top: 10%;
 }
 .food-items{
     display: grid;
     grid-template-columns: repeat(1,4fr);
+    margin:0;
+    height: 100%;
+    max-height: 950px;
+    background-color: black;
+    border-radius: 15px;
 }
 
 .food-image{
-    width: 100px;
-    width: 100px;
-    justify-content: left;
-    border-radius: 50%;
+    max-width: 40%;
+    max-height: 90%;
+    border: 3px solid gray;
+    padding: 0;
+    margin: 0;
+    margin-top: 2%;
+    border-radius: 100%;
+    margin-left: 2%;
 }
 
 .food-item{
@@ -949,21 +958,81 @@ table{
     height: 200px;
     width: 500px;
     box-shadow: none;
-    margin: 2.5% auto
+    margin: 2% auto;
 }
 .food-name{
     color: aliceblue;
-    font-size: 25px;
+    font-size: 20px;
+    font-weight: 500;
+    margin: 10% 0 0 30px;
 }
 
+.food-name-s{
+    margin-left: 20px;
+    font-size: 20px;
+    width: 150px;
+}
 .food-detalis{
     color: rgba(255, 255, 255, 0.5);
     padding: 0;
-    font-size: 20px;
+    font-size: 15px;
+    font-weight: 400;
+    margin: 5% 0 0 7%;
+    width: 170px;
 }
 .food-information{
     justify-content: right;
     margin: 5% 20% 5% 0;
 }
-/* habbit creative-section end here */
+/*  creative-section end here */
+
+/*  footer start here */
+.footer-box{
+    display: flex;
+    flex-direction: column;
+    margin: 0 5%;
+    padding: 0;
+}
+
+.footer-title1{
+    margin: 15% 0;
+    margin-top: 25%;
+    font-size: 6rem;
+}
+
+.footer-box1 p{
+    margin: 0;
+    padding: 0;
+    width: 480px;
+    font-weight: 300;
+    font-size: 1.5rem;
+}
+
+.footer-title2 ,.footer-title3{
+    margin: 20% 0 10% 0;
+}
+
+footer div ul li a{
+    color: rgba(255, 255, 255, 0.5);
+    text-decoration: none;
+    font-size: 2rem;
+}
+
+.copyright{
+    border-top: 3px solid rgba(255, 255, 255, 0.1);
+    text-align: center;
+    height: 100px;
+    margin: 20% 5% 0 5%;
+    width: 500px;
+}
+
+.copyright h2 {
+    align-items: center;
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 1.75rem;
+    font-weight: 50;
+    margin: 8% 0;
+    font-weight: 400;
+}
+/* footer end here */
 }
