--- a/style.css
+++ b/style.css
@@ -49,9 +49,15 @@ header{
 .nav-items li a{
     text-decoration: none;
     padding: 13px 27px;
-    
 }
 
+/* mew */
+.material-symbols-outlined li svg{
+    display: none;
+}
+.nav-items li{
+    display: inline-block;
+}
 .nav-item{
     color: rgb(255, 255, 255);
     font-size: 18px;
@@ -144,6 +150,10 @@ background-color:transparent;
     height: 60px;
 }
 
+.kisu-bolar-nai-vai svg{
+    height: 50px;
+    width: 50px;
+}
 .kisu-bolar-nai-vai{
     height: 50px;
     width: 50px;
@@ -265,15 +275,16 @@ background-color:transparent;
  }
 
  
- .join-now{
-    padding: 1.5% 7%;
-    border-radius: 45px;
-    font-weight: bold;
-    font-size: 1.2rem;
-    color: rgb(255, 255, 255);
-    background: rgb(230, 83, 60);
-    margin-bottom: 15%;
-}
+.join-now{
+    color: aliceblue;
+    margin: 0;
+    font-size: 25px;
+    font-weight: 500;
+    padding: 2% 5%;
+    background-color: rgb(230, 83, 60);
+    border-radius: 30px;
+    }
+ 
 
 /* bmi section started */
 .bmi-title{
@@ -613,6 +624,11 @@ footer div ul li a{
     .hide1{
         display: none;
     }
+
+    .material-symbols-outlined li svg{
+        display: block;
+    }
+
     header{
         height: 1420px
     }
@@ -745,7 +761,7 @@ button{
 }
 
 .habit-item-boxs img{
-    width: 250px;
+    max-width: 80%;
 }
 
 .habit-item-boxs div >h3{
@@ -777,12 +793,14 @@ margin: 10% 0;
 }
 
 .join-now{
-   width: 60px;
-   height: 30px;
-   margin: 0;
-   font-size: 25px;
-   font-weight: 500;
-   padding: 5% 35%;
+   background-color: rgb(230, 83, 60);
+   margin: 0 auto;
+   font-size: 1.5rem;
+   font-weight: 600;
+   padding: 5% 33%;
+   border-radius: 30px;
+   color: aliceblue;
+   margin-left: 4%;
    }
 
    .run-box div >img{
@@ -852,20 +870,21 @@ table{
     margin: 0 10% 10% 5%;
     font-size: 1.25rem;
 }
+
 #calculation{
-    margin: 5% 0 5% 0;
+    margin: 5% 5% 5% 0;
     display: grid;
     grid-template-columns: repeat(2,2fr);
-    gap: 10px;
+    gap: 7%;
 }
 
 #calculation input,select,option{
-    padding: 9% 4.7%;
+    padding: 8% 10%;
     border-radius: 15px;
-    border: none;
     color:rgba(255, 255, 255, 0.5);
     background-color:rgba(265, 255, 255, 0.08) ;
-    font-size: 20px;
+    width: 100%;
+    max-width: 90%;
     }
 
     #calculation-btn{
@@ -875,9 +894,23 @@ table{
         width: 115%;
         font-size: 25px;
     }
+
+    
+#x-1{
+    min-width: 225%;
+}
+
+#gender{
+    min-width: 110%;
+}
 /*  bmi-box end here */
 
 /*  team-container start here */
+
+.team-section{
+    height:3200px;
+}
+
  .team-title-one{
     margin: 13% auto 5%;
     font-size: 2.9rem;
@@ -889,37 +922,42 @@ table{
  }
 
  .about-member{
-    display: grid;
-    grid-template-columns: repeat(1,6fr);
+    display: flex;
+    flex-direction: column;
     margin: 0;
-    gap: 1%;
-    height: 2860px;
-    padding: 5% 1%;
+    gap: 0;
+    min-height: 100%;
     border-radius: 30px;
+    justify-content: space-around;
+    margin: 0 2%;
+    align-items: center;
  }
 
  .team-image img{
-    width: 100%;
-    height: 100%;
-    border-radius: 35px;
-    position: relative;
     max-height: 450px;
     min-height: 449px;
-    max-width: 460px;
-    padding: 0 3%;
+    border-radius: 35px;
+    margin: 2% 3%;
+    width: 93%;
+    position: relative;
 }
 
 .name-position{
     position: absolute;
-    margin-left: -78%;
-    margin-top: 63%;
+    margin-left: -75%;
+    margin-top: 65%;
+    }
+
+    .name-position-s{
+        position: absolute;
+        margin-left: -70%;
+        margin-top: 65%;
     }
 /*  team-container end here */
 
 /*  creative-section start here */
 .creative-section{
-    margin-top: 360%;
-    height: 1400px;
+    height:100%;
 }
 
 .about-healthy-food{
@@ -930,18 +968,21 @@ table{
     margin-top: 10%;
 }
 .food-items{
-    display: grid;
-    grid-template-columns: repeat(1,4fr);
+    display: flex;
+    flex-direction: column;
     margin:0;
-    height: 100%;
-    max-height: 950px;
+    height: 60%;
+    max-height: 100%;
     background-color: black;
     border-radius: 15px;
 }
 
 .food-image{
+    width: 0px;
+    height: 0px;
+    max-height: 0px;
     max-width: 40%;
-    max-height: 90%;
+    min-height: 90%;
     border: 3px solid gray;
     padding: 0;
     margin: 0;
@@ -956,29 +997,36 @@ table{
     background-color: rgb(34, 34, 34);
     border-radius: 20px;
     height: 200px;
-    width: 500px;
+    width:90%;
     box-shadow: none;
     margin: 2% auto;
 }
 .food-name{
     color: aliceblue;
-    font-size: 20px;
+    font-size: 1.5rem;
     font-weight: 500;
-    margin: 10% 0 0 30px;
+    margin: 10% 0 0 25%;
+    text-align: left;
 }
 
 .food-name-s{
-    margin-left: 20px;
-    font-size: 20px;
-    width: 150px;
+    font-size: 1.2rem;
+    width: 150%;
 }
 .food-detalis{
     color: rgba(255, 255, 255, 0.5);
     padding: 0;
-    font-size: 15px;
+    font-size: 1rem;
     font-weight: 400;
-    margin: 5% 0 0 7%;
-    width: 170px;
+    margin: 5% 0 0 27%;
+    width: 160%;
+    font-weight: 200;
+    text-align: left;
+}
+
+.food-detalis-s{
+    width: 120%;
+    margin-right: 0;
 }
 .food-information{
     justify-content: right;
@@ -1003,7 +1051,7 @@ table{
 .footer-box1 p{
     margin: 0;
     padding: 0;
-    width: 480px;
+    width: 200%;
     font-weight: 300;
     font-size: 1.5rem;
 }
@@ -1022,8 +1070,8 @@ footer div ul li a{
     border-top: 3px solid rgba(255, 255, 255, 0.1);
     text-align: center;
     height: 100px;
-    margin: 20% 5% 0 5%;
-    width: 500px;
+    margin: 20% auto 0 ;
+    width: 85%;
 }
 
 .copyright h2 {
